kubernetes/db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: postgres14
spec:
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - image: postgres:14.0-alpine
        name: db
        ports:
        - containerPort: 5432
