kubernetes/django-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - image: django_app:latest
        imagePullPolicy: Never
        name: django
        ports:
        - containerPort: 80
