kubernetes/db-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: postgres14
spec:
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - image: postgres:14.0-alpine
        name: db
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
...
