kubernetes/django-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - image: balancy/django-app:latest
        imagePullPolicy: IfNotPresent
        name: django
---
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 80
...
